--- a/src/Layout/layout.css
+++ b/src/Layout/layout.css
@@ -58,17 +58,23 @@ body::-webkit-scrollbar {
     font-size: 1.25rem;
   }
 }
-
+.navbar-component {
+  width: 20%;
+}
 .navbar-component .deskop-nav {
   width: 20%;
   min-height: 100vh;
   background-color: #f1f5f1;
   position: fixed;
+  transition: 0.5s;
+  top: 0;
+
 }
 .navbar-component .deskop-nav .navbar-header {
   background-color: #f5cfc5;
   height: 350px;
   padding: 20px;
+  position: relative;
 }
 .navbar-component .deskop-nav .navbar-header .box-1 {
   display: flex;
@@ -116,28 +122,41 @@ body::-webkit-scrollbar {
   color: #ee6c4d;
 }
 .navbar-component .deskop-nav .navbar-main ul li a img {
-  width: 25px;
+  width: 22px;
+  height: 20px;
 }
 
 .navbar-component .deskop-nav .navbar-main ul li a p {
   margin-left: 15px;
 }
 
-
-
-/* .navbar-component .mobile-nav {
-  position: fixed;
-  bottom: 0;
+.response-nav-open {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+  cursor: pointer;
+  display: none;
+}
+.response-nav-open img {
   width: 100%;
-  z-index: 99999;
-  background-color: #fff;
 }
 
-.navbar-component .mobile-nav .mobile-nav-inner {
-  display: flex;
-  justify-content: space-between;
-  padding: 20px;
-} */
+.response-nav-close {
+  display: none;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+  border-radius: 50%;
+  right: -25px;
+  background-color: #ee6c4d;
+  cursor: pointer;
+}
+
+.response-nav-close img {
+  width: 100%;
+}
 .navbar-component .mobile-nav {
   display: none;
   width: 100%;
@@ -205,16 +224,14 @@ body::-webkit-scrollbar {
   transform: translateY(50px);
 }
 
-.navbar-component .mobile-nav ul li a.active  {
+.navbar-component .mobile-nav ul li a.active {
   position: absolute;
-  
   width: 70px;
   height: 70px;
   background-color: #ff7b54;
   border-radius: 50%;
   border: 6px solid #f5f7fb;
   transform: translateY(-32px);
-  
 }
 
 .navbar-component .mobile-nav ul li a.active::before {
@@ -243,7 +260,6 @@ body::-webkit-scrollbar {
   color: transparent;
 }
 
-
 @media screen and (max-width: 800px) {
   .navbar-box {
     width: 25%;
@@ -271,6 +287,36 @@ body::-webkit-scrollbar {
   }
   .navbar-component .deskop-nav .navbar-main ul li {
     padding: 10px 20px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .navbar-component {
+    width: 0%;
+  }
+  .flex {
+    display: block;
+  }
+  .navbar-component .deskop-nav {
+    transform: translateX(-300px);
+  }
+  .container {
+    max-width: 90%;
+    margin: 20px auto;
+  }
+
+  .navbar-component.active {
+    width: 100%;
+  }
+  .navbar-component.active .deskop-nav {
+    transform: translateX(0px);
+    top: 0;
+    z-index: 999999;
+    width: 50%;
+  }
+  .response-nav-close,
+  .response-nav-open{
+      display: block;
   }
 }
 .d-none {
@@ -561,8 +607,7 @@ body::-webkit-scrollbar {
   background-color: #ee6c4d !important;
 }
 
-
-.scheldulePage  {
+.scheldulePage {
   padding: 30px 20px;
 }
 
@@ -686,18 +731,16 @@ body::-webkit-scrollbar {
 
 /*  */
 
-
-
-.teacherPage  {
+.teacherPage {
   position: relative;
 }
-.teacherPage  .items {
+.teacherPage .items {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
   margin-top: 10px;
 }
-.teacherPage  .items .item {
+.teacherPage .items .item {
   background-color: #fff;
   width: 100%;
   text-align: center;
@@ -706,186 +749,135 @@ body::-webkit-scrollbar {
   margin: 5px;
   box-shadow: 5px 5px 13px 2px rgba(0, 0, 0, 0.14);
 }
-.teacherPage  .items .item h2 {
+.teacherPage .items .item h2 {
   font-size: 1.25rem;
   line-height: 1.75rem;
   color: #706b6b;
   font-weight: 600;
 }
-.teacherPage  .items .item h4 {
+.teacherPage .items .item h4 {
   font-size: 1rem;
   line-height: 1.5rem;
   font-weight: 500;
 }
-.teacherPage  .items .item p {
+.teacherPage .items .item p {
   margin: 10px 0;
   display: flex;
   justify-content: center;
   color: #706b6b;
 }
-.teacherPage  .items .item p svg {
+.teacherPage .items .item p svg {
   width: 1rem;
   height: 1rem;
   margin-right: 5px;
 }
-.teacherPage  .items .item h5 {
+.teacherPage .items .item h5 {
   font-weight: 400;
 }
 
 @media screen and (max-width: 1000px) {
-  .teacherPage  .items {
+  .teacherPage .items {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media screen and (max-width: 650px) {
-  .teacherPage  .items {
+  .teacherPage .items {
     grid-template-columns: repeat(1, 1fr);
   }
-  .teacherPage  .items .item {
+  .teacherPage .items .item {
     width: 90%;
     margin: auto;
   }
 }
 
-
-.studentsPage  {
+.studentsPage {
   position: relative;
 }
-.studentsPage  .main {
+.studentsPage .main {
   width: 99%;
   margin: auto;
 }
-.studentsPage  .main .items {
+.studentsPage .main .items {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
-.studentsPage  .main .items .item {
+.studentsPage .main .items .item {
   padding: 1.25rem;
   width: 95%;
   border-radius: 10px;
   background-color: #fff;
   margin: 10px 0;
 }
-.studentsPage  .main .items .item .title {
+.studentsPage .main .items .item .title {
   display: flex;
   align-items: center;
   border-bottom: 1px solid #c9c9c9;
   padding-bottom: 1rem;
 }
-.studentsPage  .main .items .item .title img {
+.studentsPage .main .items .item .title img {
   width: 4rem;
 }
-.studentsPage  .main .items .item .title .text-box {
+.studentsPage .main .items .item .title .text-box {
   margin-left: 20px;
 }
-.studentsPage  .main .items .item .title .text-box h3 {
+.studentsPage .main .items .item .title .text-box h3 {
   color: #333;
   font-size: 1.125rem;
   line-height: 1.75rem;
   font-weight: 500;
 }
-.studentsPage  .main .items .item .title .text-box p {
+.studentsPage .main .items .item .title .text-box p {
   display: flex;
   justify-content: space-between;
   font-size: 0.875rem;
 }
-.studentsPage  .main .items .item .item-content p {
+.studentsPage .main .items .item .item-content p {
   display: flex;
   justify-content: space-between;
   padding: 15px 0;
   font-size: 1rem;
   font-weight: 400;
 }
-.studentsPage  .main .items .item .item-content .itemBtn {
+.studentsPage .main .items .item .item-content .itemBtn {
   display: flex;
   justify-content: flex-end;
 }
-.studentsPage  .main .items .item .item-content .itemBtn div {
+.studentsPage .main .items .item .item-content .itemBtn div {
   padding: 5px;
 }
-.studentsPage
-  
-  .main
-  .items
-  .item
-  .item-content
-  .itemBtn
-  .btn1 {
+.studentsPage .main .items .item .item-content .itemBtn .btn1 {
   display: flex;
   align-items: center;
 }
-.studentsPage
-  
-  .main
-  .items
-  .item
-  .item-content
-  .itemBtn
-  .btn1
-  svg {
+.studentsPage .main .items .item .item-content .itemBtn .btn1 svg {
   width: 1rem;
   margin-right: 5px;
 }
-.studentsPage
-  
-  .main
-  .items
-  .item
-  .item-content
-  .itemBtn
-  .btn2 {
+.studentsPage .main .items .item .item-content .itemBtn .btn2 {
   display: flex;
   align-items: center;
 }
-.studentsPage
-  
-  .main
-  .items
-  .item
-  .item-content
-  .itemBtn
-  .btn2
-  svg {
+.studentsPage .main .items .item .item-content .itemBtn .btn2 svg {
   width: 0.75rem;
   margin-right: 5px;
 }
 
 @media screen and (max-width: 800px) {
-  .studentsPage  .main .items {
+  .studentsPage .main .items {
     display: block;
   }
 }
 
-.locationPage  {
-}
-.locationPage  .header {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 40px;
-  padding-bottom: 20px;
-}
-.locationPage  .header h1 {
-  font-weight: 500;
-}
-.locationPage  .header button {
-  background-color: #ee6c4d;
-  padding: 10px 35px;
-  border-radius: 30px;
-  border: none;
-  color: white;
-  cursor: pointer;
-  margin: auto 0;
-}
-.locationPage  .main {
+.locationPage .main {
   max-width: 90%;
   margin: auto;
 }
-.locationPage  .main .items {
+.locationPage .main .items {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
-.locationPage  .main .items .item {
+.locationPage .main .items .item {
   padding: 10px 5px;
   margin: 10px;
   display: flex;
@@ -893,9 +885,9 @@ body::-webkit-scrollbar {
   background-color: #fff;
   border-radius: 11px;
 }
-.locationPage  .main .items .item svg {
+.locationPage .main .items .item svg {
   width: 3.5rem;
 }
-.locationPage  .main .items .item p {
+.locationPage .main .items .item p {
   margin-left: 10px;
 }
