--- a/src/Layout/layout.css
+++ b/src/Layout/layout.css
@@ -1045,7 +1045,7 @@ body::-webkit-scrollbar {
 .messagesPage .items .item {
   height: 175px;
 }
-/* Message page end */
+/* Message page end w*/
 
 /* Homework page start */
 .homeworkPage .user-box {
